src/buttons.less
// Buttons
.btn {
  -webkit-appearance: none;
  background: @light-bg-color;
  border: .1rem solid @primary-color;
  border-radius: @border-radius;
  color: @link-color;
  .control-transition();
  cursor: pointer;
  display: inline-block;
  font-size: 1.4rem;
  height: 3.2rem;
  line-height: 2rem;
  padding: .5rem 1.2rem;
  text-align: center;
  text-decoration: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  &:focus {
    background: @light-secondary-color;
    text-decoration: none;
  }
  &:hover {
    background: @primary-color;
    border-color: @dark-primary-color;
    color: @light-color;
    text-decoration: none;
  }
  &:active,
  &.active {
    background: @dark-primary-color;
    border-color: darken(@dark-primary-color, 5%);
    color: @light-color;
  }
  &[disabled],
  &:disabled,
  &.disabled {
    cursor: default;
    opacity: .5;
    pointer-events: none;
  }

  // Button Primary
  &.btn-primary {
    background: @primary-color;
    border-color: @dark-primary-color;
    color: @light-color;
    &:focus {
      background: @dark-primary-color;
      border-color: darken(@dark-primary-color, 2%);
      color: @light-color;
    }
    &:hover {
      background: darken(@dark-primary-color, 2%);
      border-color: darken(@dark-primary-color, 7%);
      color: @light-color;
    }
    &:active,
    &.active {
      background: darken(@dark-primary-color, 4%);
      border-color: darken(@dark-primary-color, 9%);
      color: @light-color;
    }
    &.loading {
      &::after {
        border-color: @light-color;
        border-right-color: transparent;
        border-top-color: transparent;
      }
    }
  }

  // Button Link
  &.btn-link {
    background: transparent;
    border-color: transparent;
    color: @link-color;
    &:focus,
    &:hover,
    &:active,
    &.active {
      color: @dark-link-color;
    }
  }

  // Button Sizes
  &.btn-sm {
    font-size: 1.2rem;
    height: 2.4rem;
    padding: .1rem .8rem;
  }

  &.btn-lg {
    font-size: 1.8rem;
    height: 4rem;
    padding: .9rem 1.5rem;
  }

  // Button Block
  &.btn-block {
    display: block;
    width: 100%;
  }

  // Button Action
  &.btn-action {
    width: 3.2rem;
    padding-left: .2rem;
    padding-right: .2rem;

    &.btn-sm {
      width: 2.4rem;
    }

    &.btn-lg {
      width: 4rem;
    }
  }

  // Button Clear
  &.btn-clear {
    background: transparent;
    border: 0;
    color: currentColor;
    height: 2rem;
    margin-left: .2rem;
    margin-right: -.4rem;
    opacity: .45;
    padding: 0 .4rem;
    text-decoration: none;
    width: 2rem;

    &:hover {
      opacity: .85;
    }

    &::before {
      content: '\00d7';
      display: inline-block;
      font-family: sans-serif;
      font-size: 2rem;
    }
  }
}

// Button groups
.btn-group {
  display: inline-flex;
  flex-wrap: wrap;

  .btn {
    flex: 1 0 auto;
    &:first-of-type:not(:last-of-type) {
      border-bottom-right-radius: 0;
      border-top-right-radius: 0;
    }
    &:not(:first-of-type):not(:last-of-type) {
      border-radius: 0;
      margin-left: -.1rem;
    }
    &:last-of-type:not(:first-of-type) {
      border-bottom-left-radius: 0;
      border-top-left-radius: 0;
      margin-left: -.1rem;
    }
    &:hover,
    &:focus,
    &:active,
    &.active {
      z-index: 9;
    }
  }

  &.btn-group-block {
    display: flex;
  }
}

